--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:54:02 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:54:45 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ body {
 -1 (F)</td>
       <td class="greyout leftborder">Russell Henley +1
 +1 (F)</td>
-      <td class="greyout">Brooks Koepka +2
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -198,10 +198,10 @@ E (F)</td>
 -2 (F)</td>
       <td>Matthew Fitzpatrick -1
 -1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout leftborder">Xander Schauffele +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -246,10 +246,10 @@ E (F)</td>
 -2 (F)</td>
       <td>Talor Gooch E
 E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout leftborder">Xander Schauffele +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -264,8 +264,8 @@ E (F)</td>
 E (F)</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Brooks Koepka +2
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -316,22 +316,6 @@ E (F)</td>
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">BCREAMED</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Patrick Cantlay -2
--2 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Sam Burns +3
-+3 (F)</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler -3
@@ -358,10 +342,10 @@ E (F)</td>
 -2 (F)</td>
       <td>Billy Horschel +2
 +2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout leftborder">Xander Schauffele +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -372,12 +356,28 @@ E (F)</td>
 -3 (F)</td>
       <td>Patrick Cantlay -2
 -2 (F)</td>
-      <td>Brooks Koepka(W) +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
 +2 (F)</td>
-      <td class="greyout">Adam Scott +2
+      <td class="greyout leftborder">Adam Scott +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka(W) +3
++3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Patrick Cantlay -2
+-2 (F)</td>
+      <td>Sam Burns +3
++3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -391,7 +391,7 @@ E (F)</td>
       <td>Robert MacIntyre +1
 +1 (F)</td>
       <td class="greyout leftborder">Rory McIlroy +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout">Jon Rahm +2
 +2 (F)</td>
     </tr>
@@ -424,8 +424,8 @@ E (F)</td>
 E (F)</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 +2 (F)</td>
-      <td class="greyout">Brooks Koepka +2
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -452,12 +452,12 @@ E (F)</td>
 -2 (F)</td>
       <td>Will Zalatoris -1
 -1 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td>Jon Rahm +2
 +2 (F)</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -468,10 +468,10 @@ E (F)</td>
 -2 (F)</td>
       <td>Will Zalatoris -1
 -1 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
 +2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -502,8 +502,8 @@ E (F)</td>
 -1 (F)</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -518,8 +518,8 @@ E (F)</td>
 E (F)</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -533,7 +533,7 @@ E (F)</td>
       <td>Viktor Hovland E
 E (F)</td>
       <td>Rory McIlroy +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele +2
 +2 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -549,7 +549,7 @@ E (F)</td>
       <td>Viktor Hovland E
 E (F)</td>
       <td>Rory McIlroy(W) +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Jon Rahm +2
 +2 (F)</td>
       <td class="greyout">Jordan Spieth +2
@@ -613,7 +613,7 @@ E (F)</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td>Rory McIlroy(W) +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele +2
 +2 (F)</td>
       <td class="greyout">Justin Thomas +4
@@ -644,11 +644,11 @@ E (F)</td>
 -3 (F)</td>
       <td>Jon Rahm(W) +2
 +2 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
 +2 (F)</td>
-      <td class="greyout">Sam Burns +3
+      <td class="greyout leftborder">Sam Burns +3
++3 (F)</td>
+      <td class="greyout">Brooks Koepka +3
 +3 (F)</td>
     </tr>
     <tr>
@@ -662,10 +662,10 @@ E (F)</td>
 E (F)</td>
       <td>Jordan Spieth(W) +2
 +2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -693,7 +693,7 @@ E (F)</td>
       <td>Viktor Hovland E
 E (F)</td>
       <td>Rory McIlroy +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 (F)</td>
       <td class="greyout">Xander Schauffele(W) +2
@@ -707,7 +707,7 @@ E (F)</td>
       <td>Viktor Hovland E
 E (F)</td>
       <td>Rory McIlroy +1
-+1 thru 17</td>
++1 (F)</td>
       <td>Bubba Watson +1
 +1 (F)</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
@@ -724,10 +724,10 @@ E (F)</td>
 -2 (F)</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
 +2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -754,12 +754,12 @@ E (F)</td>
 -3 (F)</td>
       <td>Patrick Cantlay -2
 -2 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
       <td>Xander Schauffele +2
 +2 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
 +2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -789,7 +789,7 @@ E (F)</td>
       <td>Viktor Hovland E
 E (F)</td>
       <td>Rory McIlroy +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 (F)</td>
       <td class="greyout">Justin Thomas +4
@@ -804,11 +804,11 @@ E (F)</td>
 -2 (F)</td>
       <td>Jordan Spieth(W) +2
 +2 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td>Jon Rahm +2
 +2 (F)</td>
-      <td class="greyout">Sam Burns +3
+      <td class="greyout leftborder">Sam Burns +3
++3 (F)</td>
+      <td class="greyout">Brooks Koepka +3
 +3 (F)</td>
     </tr>
     <tr>
@@ -819,11 +819,11 @@ E (F)</td>
       <td>Will Zalatoris -1
 -1 (F)</td>
       <td>Rory McIlroy +1
-+1 thru 17</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +2
++1 (F)</td>
+      <td>Jon Rahm +2
 +2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -835,29 +835,13 @@ E (F)</td>
       <td>Viktor Hovland E
 E (F)</td>
       <td>Rory McIlroy +1
-+1 thru 17</td>
++1 (F)</td>
       <td>Jon Rahm(W) +2
 +2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout leftborder">Xander Schauffele +2
 +2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Will Zalatoris -1
--1 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td>Xander Schauffele +2
-+2 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-+4 (F)</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -870,10 +854,10 @@ E (F)</td>
 +1 (F)</td>
       <td>Jon Rahm(W) +2
 +2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -900,12 +884,12 @@ Out With Injury</td>
 E (F)</td>
       <td>Jon Rahm(W) +2
 +2 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
 +2 (F)</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -917,10 +901,26 @@ E (F)</td>
       <td>Collin Morikawa(W) +1
 +1 (F)</td>
       <td>Rory McIlroy +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Gary Woodland +3
 +3 (F)</td>
       <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Will Zalatoris -1
+-1 (F)</td>
+      <td>Xander Schauffele +2
++2 (F)</td>
+      <td>Brooks Koepka +3
++3 (F)</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
+      <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -932,10 +932,10 @@ E (F)</td>
 E (F)</td>
       <td>Jon Rahm(W) +2
 +2 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
 +2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -945,7 +945,7 @@ E (F)</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Rory McIlroy +1
-+1 thru 17</td>
++1 (F)</td>
       <td>Xander Schauffele +2
 +2 (F)</td>
       <td>Sam Burns +3
@@ -978,12 +978,12 @@ E (F)</td>
 -2 (F)</td>
       <td>Collin Morikawa +1
 +1 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
       <td>Xander Schauffele +2
 +2 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
 +2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -993,7 +993,7 @@ E (F)</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Rory McIlroy +1
-+1 thru 17</td>
++1 (F)</td>
       <td>Jon Rahm(W) +2
 +2 (F)</td>
       <td>Xander Schauffele +2
@@ -1012,10 +1012,10 @@ E (F)</td>
 E (F)</td>
       <td>Jon Rahm(W) +2
 +2 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
 +2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -1025,13 +1025,13 @@ E (F)</td>
       <td>Patrick Cantlay(W) -2
 -2 (F)</td>
       <td>Rory McIlroy +1
-+1 thru 17</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
++1 (F)</td>
       <td>Jon Rahm +2
 +2 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
 +2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -1042,44 +1042,28 @@ E (F)</td>
 E (F)</td>
       <td>Collin Morikawa +1
 +1 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
       <td>Jon Rahm +2
 +2 (F)</td>
-      <td class="greyout leftborder">Patrick Reed +2
+      <td>Patrick Reed +2
 +2 (F)</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 +2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">6</td>
-      <td>Viktor Hovland E
-E (F)</td>
-      <td>Jon Rahm(W) +2
-+2 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td>Xander Schauffele +2
-+2 (F)</td>
-      <td class="greyout leftborder">Louis Oosthuizen +4
-+4 (F)</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
       <td class="bigbold">6</td>
       <td>Viktor Hovland E
 E (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
       <td>Jon Rahm +2
 +2 (F)</td>
       <td>Xander Schauffele +2
 +2 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
 +2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -1097,6 +1081,22 @@ E (F)</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Tony Muir</td>
+      <td class="bigbold">7</td>
+      <td>Viktor Hovland E
+E (F)</td>
+      <td>Jon Rahm(W) +2
++2 (F)</td>
+      <td>Xander Schauffele +2
++2 (F)</td>
+      <td>Brooks Koepka +3
++3 (F)</td>
+      <td class="greyout leftborder">Louis Oosthuizen +4
++4 (F)</td>
+      <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
   </tbody>
