--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:54:02 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:54:45 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -182,8 +182,8 @@ body {
 E (F)</td>
       <td>Collin Morikawa +1
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -197,7 +197,7 @@ E (F)</td>
       <td>Viktor Hovland E
 E (F)</td>
       <td>Rory McIlroy +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 +3 (F)</td>
       <td class="greyout">Justin Thomas +4
@@ -214,8 +214,8 @@ E (F)</td>
 -1 (F)</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -229,11 +229,11 @@ E (F)</td>
       <td>Collin Morikawa +1
 +1 (F)</td>
       <td>Rory McIlroy +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Xander Schauffele +2
++1 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -278,10 +278,10 @@ E (F)</td>
 E (F)</td>
       <td>Jordan Spieth(W) +2
 +2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -310,8 +310,8 @@ E (F)</td>
 -1 (F)</td>
       <td>Collin Morikawa +1
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -326,10 +326,10 @@ E (F)</td>
 +1 (F)</td>
       <td>Jon Rahm +2
 +2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -360,8 +360,8 @@ E (F)</td>
 +2 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 (F)</td>
-      <td class="greyout">Brooks Koepka +2
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -388,10 +388,10 @@ E (F)</td>
 +1 (F)</td>
       <td>Jon Rahm +2
 +2 (F)</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Patrick Reed +2
+      <td>Patrick Reed +2
 +2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +3
++3 (F)</td>
       <td class="greyout">Luke List +5
 +5 (F)</td>
     </tr>
