--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:12:55 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:13:38 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -388,10 +388,10 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -2
 Not started</td>
-      <td>Robert MacIntyre +1
-E thru 1</td>
-      <td class="greyout leftborder">Rory McIlroy +1
+      <td>Rory McIlroy +1
 Not started</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 thru 2</td>
       <td class="greyout">Jon Rahm +2
 Not started</td>
     </tr>
@@ -764,22 +764,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners(W) -2
-Not started</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Robert MacIntyre +1
-E thru 1</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
-      <td class="greyout">Jordan Spieth +2
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-1</td>
       <td>Tiger Woods(W) -1
@@ -809,6 +793,22 @@ Not started</td>
       <td class="greyout leftborder">Sam Burns +3
 Not started</td>
       <td class="greyout">Brooks Koepka +3
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners(W) -2
+Not started</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Robert MacIntyre +2
++1 thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +2
+Not started</td>
+      <td class="greyout">Jordan Spieth +2
 Not started</td>
     </tr>
     <tr>
