--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:12:55 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:13:38 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -332,22 +332,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners(W) -2
-Not started</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Robert MacIntyre +1
-E thru 1</td>
-      <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
-      <td class="greyout">Jordan Spieth +2
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -2
@@ -362,6 +346,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners(W) -2
+Not started</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Jon Rahm +2
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+Not started</td>
+      <td class="greyout">Robert MacIntyre +2
++1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
