--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:33:01 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:33:44 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,13 +141,13 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
-      <td>Corey Conners -2
-E thru 1</td>
+      <td>Corey Conners -3
+-1 thru 2</td>
       <td>Xander Schauffele +2
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -220,6 +220,38 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 2</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Xander Schauffele +2
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+Not started</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-4</td>
+      <td>Corey Conners -3
+-1 thru 2</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Tyrrell Hatton E
+Not started</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm +2
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
@@ -236,38 +268,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -2
-E thru 1</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Xander Schauffele +2
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-3</td>
-      <td>Patrick Cantlay -2
-Not started</td>
-      <td>Corey Conners -2
-E thru 1</td>
-      <td>Tyrrell Hatton E
-Not started</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-3</td>
       <td>Dustin Johnson -3
@@ -281,6 +281,22 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
 Not started</td>
       <td class="greyout">Brooks Koepka +3
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">-2</td>
+      <td>Dustin Johnson -3
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 2</td>
+      <td>Xander Schauffele(W) +2
+Not started</td>
+      <td>Russell Henley +2
++1 thru 2</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Louis Oosthuizen +4
 Not started</td>
     </tr>
     <tr>
@@ -316,20 +332,20 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">0</td>
-      <td>Dustin Johnson -3
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners(W) -3
+-1 thru 2</td>
+      <td>Daniel Berger -1
 Not started</td>
-      <td>Corey Conners -2
-E thru 1</td>
-      <td>Xander Schauffele(W) +2
+      <td>Collin Morikawa +1
 Not started</td>
-      <td>Russell Henley +3
-+2 thru 1</td>
-      <td class="greyout leftborder">Justin Thomas +4
+      <td>Jon Rahm +2
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
+      <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
+      <td class="greyout">Robert MacIntyre +2
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -348,26 +364,10 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners(W) -2
-E thru 1</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Jon Rahm +2
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
-      <td class="greyout">Robert MacIntyre +2
-+1 thru 3</td>
-    </tr>
-    <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">4</td>
-      <td>Corey Conners -2
-E thru 1</td>
+      <td class="bigbold">3</td>
+      <td>Corey Conners -3
+-1 thru 2</td>
       <td>Jon Rahm +2
 Not started</td>
       <td>Xander Schauffele +2
