--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:46:42 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:47:25 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -1037,15 +1037,15 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
+      <td>Patrick Reed +1
+-1 thru 2</td>
       <td>Jon Rahm +2
 Not started</td>
-      <td>Patrick Reed +2
-E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
       <td class="greyout">Brooks Koepka +3
