--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:51:01 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:51:44 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -268,6 +268,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">-3</td>
+      <td>Dustin Johnson -3
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 3</td>
+      <td>Russell Henley +1
+E thru 3</td>
+      <td>Xander Schauffele(W) +2
+Not started</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Louis Oosthuizen +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-3</td>
       <td>Dustin Johnson -3
@@ -281,22 +297,6 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
 Not started</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson -3
-Not started</td>
-      <td>Corey Conners -3
--1 thru 3</td>
-      <td>Xander Schauffele(W) +2
-Not started</td>
-      <td>Russell Henley +2
-+1 thru 2</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
 Not started</td>
     </tr>
     <tr>
