--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:53:53 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:54:36 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -275,7 +275,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Webb Simpson -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
