--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:58:11 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:58:54 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -342,10 +342,10 @@ Not started</td>
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+1 thru 4</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +2
 Not started</td>
+      <td class="greyout">Robert MacIntyre +3
++2 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -772,12 +772,12 @@ Not started</td>
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
-      <td>Robert MacIntyre +2
-+1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td>Jon Rahm +2
 Not started</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
+      <td class="greyout">Robert MacIntyre +3
++2 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
