--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:23:18 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:24:01 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -252,22 +252,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-3</td>
-      <td>Patrick Cantlay -2
-Not started</td>
-      <td>Corey Conners -2
-E thru 4</td>
-      <td>Tyrrell Hatton E
-Not started</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-3</td>
       <td>Dustin Johnson -3
@@ -281,6 +265,22 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
 Not started</td>
       <td class="greyout">Brooks Koepka +3
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-2</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Corey Conners -2
+E thru 4</td>
+      <td>Tyrrell Hatton +1
++1 thru 1</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm +2
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -364,22 +364,6 @@ Not started</td>
 +2 thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Patrick Reed +1
--1 thru 3</td>
-      <td>Jon Rahm +2
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
-      <td class="greyout">Luke List +5
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">4</td>
       <td>Corey Conners -2
@@ -393,6 +377,22 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">5</td>
+      <td>Viktor Hovland(W) E
+Not started</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Jon Rahm +2
+Not started</td>
+      <td>Patrick Reed +2
+E thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+Not started</td>
+      <td class="greyout">Luke List +5
 Not started</td>
     </tr>
   </tbody>
